wip: JDK 8 + JDK 21 dual-variant build (parked for later)
Checkpoint of the JDK 8 compatibility work-in-progress, branched off before
chore/easier-builds was retargeted to JDK 11+/21+ only. Preserved here to
pick back up as a follow-on once the JDK 11+/21+ variants have shipped.

What's in this checkpoint:

- pom.xml: property-driven Aerospike client artifact + compiler release
  level (aerospike-client-jdk8 / --release 8 by default; a "jdk21" profile
  overrides to aerospike-client-jdk21 / --release 21), each producing a
  distinctly-named jar (ClusterComparator-X.Y.Z-jdk8-full.jar /
  -jdk21-full.jar). Switched from <source>/<target> to <release> so the
  compiler validates against the target JDK's real API surface regardless
  of which JDK actually runs Maven.

- Fixed Java 9+/11+ API usage in main code that --release 8 caught
  immediately (this is exactly why <release> matters - none of this was
  caught by a prior manual code audit that only checked for a fixed list of
  known post-Java-8 features):
  - WebServer.java: 19x Map.of(...) (Java 9+) -> a small Java-8-compatible
    mapOf(...) helper.
  - AerospikeComparator.java: Arrays.compare(byte[], byte[]) (Java 9+) ->
    a compareBytes(...) helper with equivalent lexicographic semantics.
  - RemoteServer.java / RemoteUtils.java: 7x DataInputStream#readNBytes(int)
    (Java 9+) -> new byte[length] + readFully(...) (Java 8-compatible, and
    arguably more correct: readFully throws EOFException on a truncated
    read instead of silently returning a shorter array).
  - Test-only: List.of(...) and String#isBlank() (Java 9+/11+) fixed in
    PathOptionsLongTest.java / ClusterTestHosts.java so tests compile/run
    under a JDK 8 toolchain too.

- Verified end-to-end on a real JDK 8 install (not just --release 8
  compile-time checking): the built jar's CLI/scan functionality works
  fully - confirmed by watching it reach a live cluster-connection attempt.
  Both our own compiled classes and the bundled aerospike-c